k8s/blueprints/n8n/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
