k8s/blueprints/n8n/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  hostnames:
    - n8n.meysam.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: global
      namespace: cert-manager
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: n8n
          port: 80
      filters:
        - requestHeaderModifier:
            set:
              - name: x-forwarded-host
                value: n8n.meysam.io
          type: RequestHeaderModifier
        - responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains; preload
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
